force-app/main/default/objects/Pre_Flight_Task__c/Pre_Flight_Task__c.object-meta.xml
<CustomObject>
    <label>Pre Flight Task</label>
    <nameField>
        <label>Pre Flight Tasks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pre Flight Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>