force-app/main/default/objects/Pre_Flight_Task__c/fields/Aircraft__c.field-meta.xml
<CustomField>
    <fullName>Aircraft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft</label>
    <referenceTo>Aircraft__c</referenceTo>
    <relationshipLabel>Pre Flight Tasks</relationshipLabel>
    <relationshipName>Pre_Flight_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>