force-app/main/default/objects/Pre_Flight_Task__c/fields/Emergency_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Equipment</label>
    <type>Checkbox</type>
</CustomField>