force-app/main/default/objects/Pre_Flight_Task__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flight</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Pre Flight Tasks</relationshipLabel>
    <relationshipName>Pre_Flight_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>