force-app/main/default/objects/Pre_Flight_Task__c/fields/Instruments_Functional__c.field-meta.xml
<CustomField>
    <fullName>Instruments_Functional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instruments Functional</label>
    <type>Checkbox</type>
</CustomField>