force-app/main/default/objects/Pre_Flight_Task__c/fields/Oil_Level_Checked__c.field-meta.xml
<CustomField>
    <fullName>Oil_Level_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oil Level Checked</label>
    <type>Checkbox</type>
</CustomField>