force-app/main/default/objects/Pre_Flight_Task__c/fields/Tires_And_Brakes__c.field-meta.xml
<CustomField>
    <fullName>Tires_And_Brakes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tires And Brakes</label>
    <type>Checkbox</type>
</CustomField>