force-app/main/default/objects/Pre_Flight_Task__c/listViews/On_Ground_Staff_Pre_Flight_Task.listView-meta.xml
<ListView>
    <fullName>On_Ground_Staff_Pre_Flight_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>On Ground Staff</label>
    <queue>On_Ground_Staff</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>